@@ -15,7 +15,6 @@ TODO Android
     INGAME SCREEN:
 	in capital mode, the circles around countries look wrong, maybe draw 2 or use thicker lines
 	when placing armies, the player can only place 1 army at a time, no choice to place 1 or 5 or 10 or 25 ...
-        (add stats button)
 	(try semi-transparent marble for top and bottom, or add a gradient to the black)
 
 Still needs to be done:
